force-app/main/default/objects/User__c/User__c.object-meta.xml
<CustomObject>
    <label>User</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>