force-app/main/default/objects/User__c/fields/Alt__c.field-meta.xml
<CustomField>
    <fullName>Alt__c</fullName>
    <label>Alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>