force-app/main/default/objects/User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reader</fullName>
                <default>true</default>
                <label>Reader</label>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>