force-app/main/default/objects/User__c/fields/SFUser__c.field-meta.xml
<CustomField>
    <fullName>SFUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SFUsers</relationshipName>
    <type>Lookup</type>
</CustomField>